fix: Security and logic fixes (#cursor)
- Replace hardcoded Flask secret key with env var or generated key
- Require JWT_SECRET_KEY env var (no insecure fallback)
- Restrict CORS origins (configurable via CORS_ORIGINS env var)
- Fix duplicate return statement in api_set_deployment_config
- Fix incomplete exception handler in api_set_api_keys
- Add missing Config.get() method for environment variable access

--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,39 @@
+# Environment variables
+.env
+
 # Python
 __pycache__/
 *.py[cod]
 *$py.class
 *.so
 .Python
-venv/
 env/
+venv/
 ENV/
+build/
+dist/
+*.egg-info/
 
 # Database
 *.db
 *.sqlite
 *.sqlite3
 
-# Build files
-build/
-dist/
-*.spec
+# Logs
+logs/
+*.log
 
 # IDE
 .vscode/
 .idea/
 *.swp
 *.swo
+*~
 
 # OS
 .DS_Store
 Thumbs.db
 
-# Logs
-*.log
-
+# Temporary files
+temp/
+*.tmp
